# GeminiHydra

./: .act.secrets.example  .actrc  .env.example  .eslintrc.cjs  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  AgentSwarm.psm1  Backup-Gemini.ps1  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Create-Shortcut.ps1  GEMINI.md  GeminiCLI.vbs  GeminiExtras.psm1  GeminiRAG.psm1  Invoke-GeminiWithFallback.ps1  Justfile  README.md  README.txt  REFACTORING_REPORT.md  Repair.ps1  Start-StatusMonitor.ps1  TECHNICAL_REPORT_v12.md  Test-TheSwarm.ps1  _launcher.ps1  ai-handler.ps1  biome.json  check_quotes.cjs  claude-code.bat  claude-code.ps1  claude-wt.bat  claude.cmd  claude.ps1  create-gui-shortcut.ps1  create-shortcut.ps1  create-shortcuts.ps1  (+44 more)
.claude/: settings.local.json  statusline.cjs
.claude/commands/: ai-batch.md  ai-config.md  ai-health.md  ai-help.md  ai-pull.md  ai-status.md  ai.md
.claude/hooks/: ai-handler-integration.ps1
.gemini/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-commit
.serena/: project.yml
.serena/memories/: Yennefer.md  index-memory-catalog.md  policy-project-identity.md  policy-serena-longterm-memory.md  project_identity.md  session_state.md  task-log-2026-01-13.md  task-log-2026-01-14.md  task_log_2026-01-14.md  workflow-serena-every-query.md  workflow-task-log.md
GeminiGUI/: .gitignore  clean-start.ps1  clear-storage.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wdio.conf.ts
GeminiGUI/scripts/: setup-msedgedriver.ps1
GeminiGUI/src/: App.css  App.tsx  index.ts  main.tsx
ai-handler/: AIFacade.psm1  AIModelHandler.psm1  Invoke-AI.ps1  README.md  ai-state.json
ai-handler/modules/: AgentSwarm.psm1
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  fly.staging.toml  fly.toml
backend/.cargo/: audit.toml
backend/.sqlx/: README.md
backend/adk/: .dockerignore  .env.example  Dockerfile
backend/migrations/: 2026022609_020_settings_improvements.sql  20260303_041_force_model.sql  2026030401_043_align_agent_prompts.sql  20260304_042_seed_mcp_servers.sql  2026030805_044_a2a_settings.sql  2026030806_045_a2a_duration.sql  2026030807_046_a2a_call_depth.sql  2026030808_047_a2a_model_used.sql  2026030809_048_a2a_tokens.sql  2026030810_049_a2a_progress.sql  20260309020000_create_agent_profiles.sql  2026031507_037_mcp_permissions.sql  2026031508_038_seed_geralt_mcp_permissions.sql  2026032901_039_drop_old_auth_tables.sql  2026041101_051_perf_indexes.sql
backend/scripts/: backup.sh
backend/src/: a2a.rs  analysis.rs  audit.rs  auth.rs  browser_proxy.rs  classify.rs  context.rs  error.rs  files.rs  lib.rs  logs.rs  main.rs  model_registry.rs  models.rs  oauth.rs  oauth_github.rs  oauth_google.rs  oauth_vercel.rs  ocr.rs  prompt.rs  service_tokens.rs  state.rs  system_monitor.rs  tool_defs.rs  watchdog.rs
backend/src/files/: mod.rs  validator.rs
backend/src/handlers/: agents.rs  execute.rs  extractor.rs  files_handlers.rs  mod.rs  streaming.rs  system.rs  tests.rs
backend/src/mcp/: client.rs  config.rs  mod.rs  server.rs
backend/src/sessions/: crud.rs  mod.rs  settings.rs
backend/src/state/: mod.rs  model_state.rs  session_state.rs
backend/src/tools/: fly_tools.rs  git_tools.rs  github_tools.rs  mod.rs  web_scraping.rs
backend/tests/: api_tests.rs  health_rate_limit_test.rs  health_test.rs  schema_test.rs
claude-gui/: create-shortcut.ps1  index.html  package-lock.json  package.json  run-claude-gui.bat  tailwind.config.js  vite.config.ts
claude-gui/src/: App.tsx  index.css
claude-gui/src-tauri/: Cargo.toml  tauri.conf.json
claude-gui/src-tauri/src/: agentic.rs  chat_history.rs  commands.rs  debug.rs  lib.rs  main.rs  ollama_commands.rs
claude-gui/src-tauri/src/claude/: auto_approve.rs  bridge.rs  mod.rs  state.rs  types.rs
claude-gui/src-tauri/src/ollama/: client.rs  types.rs
config/: default.json
coverage/: clover.xml  coverage-final.json  index.html  lcov.info
coverage/config/: agents.ts.html  constants.ts.html  index.html
coverage/core/: Agent.ts.html  GraphProcessor.ts.html  cache.ts.html  errors.ts.html  index.html  pool.ts.html  retry.ts.html  stats.ts.html
coverage/lcov-report/: Banner.js.html  Borders.js.html  MarkdownRenderer.js.html  Theme.js.html  config.js.html  constants.js.html  icons.js.html  index.html  (+3 more)
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  CONTRIBUTING.md  DESIGN-SYSTEM.md  HYDRA.md  MCP.md  PIPELINE.md  README.md  SECURITY.md  TOOLS.md
e2e/: cli.cli.test.ts  swarm.integration.test.ts  test.ts
examples/: borders-demo.js  error-formatting-demo.js  table-demo.js
grimoires/: filesystem_tools.md
gui/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
modules/: GUI-Utils.psm1
playwright-report/: index.html
scripts/: backup.ps1  create-shims.js  create-shims.ts  setup-ssh-key.sh  strip-workspace-deps.ts
src/: Agent.ts  GraphProcessor.ts  Swarm.ts  cache.js  config.js  env.js  gemini-models.js  index.ts  logger.js  main.tsx  ollama-client.js  prompt-optimizer.js  prompt-queue.js  self-correction.js  server.js  smart-queue.js  swarm.js  system-prompt.js  task-classifier.js  tool-validator.js  tools.js  ui.js  version.js  vite-env.d.ts
test/: banner.test.js  cache.test.js  prompt-queue.test.js  task-classifier.test.js  tools.test.js  ui.test.js
tests/: setup.ts
(+842 files in other folders)
