[package]
name = "gemini_hydra_backend"
version = "15.0.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
jaskier-core = { path = "../../../crates/jaskier-core", features = ["otel"] }
jaskier-net-sec = { path = "../../../crates/jaskier-net-sec" }
jaskier-ai-modules = { path = "../../../crates/jaskier-ai-modules" }
jaskier-browser = { path = "../../../crates/jaskier-browser" }
jaskier-tools = { path = "../../../crates/jaskier-tools" }
jaskier-db = { path = "../../../crates/jaskier-db" }
jaskier-hydra-state = { path = "../../../crates/jaskier-hydra-state" }
jaskier-auth = { path = "../../../crates/jaskier-auth" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
sysinfo = { workspace = true }
subtle = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
streaming-iterator = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
http = { workspace = true }
async-stream = { workspace = true }
glob = { workspace = true }
dirs = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
pdf-extract = { workspace = true }
scraper = { workspace = true }
zip = { workspace = true }
ego-tree = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
shuttle-axum = { version = "0.57.0", optional = true }
shuttle-runtime = { version = "0.57.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Console"] }
rfd = "0.15"

[features]
default = []
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime"]
test-helpers = []

[dev-dependencies]
tower = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
wiremock = { workspace = true }
