[package]
name = "claude-gui"
version = "0.1.0"
description = "Claude HYDRA - AI Swarm Control Center"
authors = ["ClaudeCLI"]
edition = "2021"

[lib]
name = "claude_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process", "sync", "io-util"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
dirs = "6"

# CPU Parallelism - wykorzystaj wszystkie rdzenie!
rayon = "1.10"
num_cpus = "1.16"
parking_lot = "0.12"  # Faster mutexes
lazy_static = "1.5"   # Global state for debug

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Dev profile - faster builds with parallelism
[profile.dev]
opt-level = 0
debug = true

# Custom profile for parallel release builds
[profile.release-parallel]
inherits = "release"
codegen-units = 4  # More parallelism during compile
lto = "thin"       # Faster LTO with multiple threads
